<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/image_viewpager_layout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        >

        <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
            android:id="@+id/image_viewpager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

        <TextView
            android:id="@+id/braodcast_textView"
            style="@style/DefaultText"
            android:layout_width="fill_parent"
            android:layout_height="20sp"
            android:layout_alignParentTop="true"
            android:background="#CCc0dcf2"
            android:drawableLeft="@drawable/broadcast"
            android:paddingLeft="15dp"
            android:text="福建省国税局将举办首期“微访谈”" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#50FFFFFF" >

            <TextView
                android:id="@+id/imageDescriptionView"
                style="@style/DefaultText"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/images_dots"
                android:paddingLeft="15dp"
                android:text="省局举办全省国税系统为民务实清廉先进事迹巡回报告会" />

            <LinearLayout
                android:id="@+id/images_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/no_image"
                    android:padding="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_dot_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/no_image"
                    android:padding="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_dot_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/no_image"
                    android:padding="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_dot_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/no_image"
                    android:padding="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_dot_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/no_image"
                    android:padding="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_dot_style" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/image_viewpager_layout"
        android:layout_alignWithParentIfMissing="true"  >
    </FrameLayout>

    <FrameLayout
        android:id="@+id/menu_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal" >

            <FrameLayout
                android:id="@+id/home_frameLayout"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:background="@drawable/main_btn_bg_selector"
                android:onClick="homeClick" >

                <ImageView
                    android:id="@+id/top_image_main"
                    android:layout_width="fill_parent"
                    android:layout_height="3dip"
                    android:background="@drawable/main_top_bg_selector"
                    android:contentDescription="@string/no_image" />

                <ImageView
                    android:id="@+id/home_imageview"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/no_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_imageview_selector" />

                <TextView
                    android:id="@+id/home_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/home"
                    android:textColor="@drawable/mainmenu_textview_selector" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_main2"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:background="@drawable/main_btn_bg_selector"
                android:onClick="publicServiceClick" >

                <ImageView
                    android:id="@+id/top_image_main2"
                    android:layout_width="fill_parent"
                    android:layout_height="3dip"
                    android:background="@drawable/main_top_bg_selector" />

                <ImageView
                    android:id="@+id/publicservice_imageview"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/publicservice_imageview_selector" />

                <TextView
                    android:id="@+id/publicservice_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/public_service"
                    android:textColor="@drawable/mainmenu_textview_selector" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_main3"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:onClick="mobileTaxClick" >

                <ImageView
                    android:id="@+id/mobiletax_imageview"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/mobiletax_imageview_selector" />

                <TextView
                    android:id="@+id/mobiletax_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/mobile_tax"
                    android:textColor="@drawable/mainmenu_textview_selector" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_main4"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:onClick="userCenterClick" >

                <ImageView
                    android:id="@+id/usercenter_imageview"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/usercenter_imageview_selector" />

                <TextView
                    android:id="@+id/usercenter_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/user_center"
                    android:textColor="@drawable/mainmenu_textview_selector" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>